# VerInf

./: .gitignore  ARCHITECTURE.md  README.md  gdoc-reference.docx  paper.docx  paper.md  pdf-header.tex  requirements.txt
analysis/: appendix-moe-routing.md  check_quad_avalues.py  check_quad_order.py  check_tables.py  claim-uniqueness-verification.md  codebase-cleanup-plan.md  compare_accuracy.py  compare_to_fp16.py  cv_check.py  design-feasibility.md  dump_ui_proof.py  full-model-hidden-run-archive.md  full-model-sound-run-archive.md  full-model-v1-design.md  improvements-roadmap.md  instrumented-phase-split.md  logits_report.py  maverick-cost-model.md  maverick_cost_model.py  maverick_full_ref.py  maverick_m0_check.py  maverick_noise_sweep.py  nvfp4-matmul-predictability.md  nvfp4_matmul_test.py  nvfp4_scale_layout_bruteforce.py  p0-quad-on-last-variable.md  paper.md  per_op_attribution.py  persistent-weights.md  precision_overflow_model.py  prover-optimization-investigation.md  qlin-evenodd-fused-multiply.md  qlin-family-object-reorg.md  qlin-fold-kernel-bench-results.md  qlin-fold-kernels-HANDOFF.md  qlin-fold-reorg-plan.md  quantization-evaluation.md  quantization_accuracy_sim.py  related-work.md  shadow_tape.py  (+13 more)
arxiv/: .gitignore  build.sh  convert.py  preamble.tex
demo/: demo_llama7b.py  demo_maverick_block.py  demo_maverick_full.py  demo_maverick_moe.py  demo_prompt.txt  gate.py
lean/: .gitignore  (+1 more)
verifier/: Cargo.toml
verifier/src/: claim.rs  compile.rs  field.rs  handlers.rs  lib.rs  protocol.rs  prover.rs  runs_difftest.rs  verify.rs  verify_difftest.rs
(+117 files in other folders)
